--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,14 @@ coverage/
 # Log files
 npm-debug.log*
 yarn-debug.log*
+# Python
+*.pyc
+__pycache__/
+env/
+db.sqlite3
+/media/
+
+# Node.js
+node_modules/
+build/
+.env
